feat: add jwt auth
