# src/main/java/com/tbank/marketplace/model/entity/User.java
@@ -3,8 +3,13 @@ package com.tbank.marketplace.model.entity;
 
 import jakarta.persistence.*;
 import lombok.*;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.UUID;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "users")
@@ -13,7 +18,7 @@ import java.util.UUID;
 @Getter
 @Setter
 @Builder
-public class User {
+public class User implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.UUID)
     private UUID id;
@@ -27,19 +32,66 @@ public class User {
     @Column(nullable = false, length = 255, name = "name")
     private String name;
 
+    @Column(name = "role")
     @Enumerated(EnumType.STRING)
-    @Column(nullable = false, name = "role")
-    private UserRole role = UserRole.USER;
+    private UserRole role;
+
+    private boolean enabled = true;
+    private boolean accountNotExpired = true;
+    private boolean accountNonLocked = true;
+    private boolean credentialsNonExpired = true;
+
+    private LocalDateTime createdAt;
+    private LocalDateTime updatedAt;
+
+    @PrePersist
+    private void onCreate(){
+        LocalDateTime now = LocalDateTime.now();
+        this.createdAt = now;
+        this.updatedAt = now;
+    }
+
+    @PreUpdate
+    private void onUpdate(){
+        this.updatedAt = LocalDateTime.now();
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(new SimpleGrantedAuthority(this.role.getAuthority()));
+    }
+
+    @Override
+    public String getUsername() {
+        return this.email;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return this.accountNotExpired;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return this.accountNonLocked;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return this.credentialsNonExpired;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return this.enabled;
+    }
+
+
 
     public enum UserRole {
-        USER, SELLER, ADMIN
-    }
-
-    public boolean isSeller() {
-        return this.role == UserRole.SELLER;
-    }
-
-    public boolean isAdmin() {
-        return this.role == UserRole.ADMIN;
+        USER, SELLER, ADMIN;
+        public String getAuthority() {
+            return "ROLE_" + this.name();
+        }
     }
 }
